test/fail/enhanced-migration-bad-chain.mo
//MOC-FLAG --enhanced-orthogonal-persistence --default-persistent-actors --enhanced-migration enhanced-migration/enh-mig-test1
//MOC-FLAG -A=M0194

actor {
    let a : Float;
    let b : Bool;
};
